--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,25 @@
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
+  font-family: 'Open Sans', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .App {
   width: 100vw;
   height: 100vh;
+  padding: 20px;
+  padding-top: 40px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
